# fishcrack

./: Cargo.toml  LICENSE  README.md
src/: algorithms.rs  banner.rs  main.rs
