[package]
name = "fishcrack"
version = "0.1.0"
edition = "2018"
authors = ["DaddyBigFish"]
description = "Hash cracking written in rust."
repository = "https://github.com/DaddyBigFish/fishcrack.git"
license = "MIT"

[dependencies]
digest = "0.10.3"
instant = "0.1.9"
lazy_static = "1.4.0"
indicatif = "0.16.2"
rayon = "1.5.1"
easy_reader = "0.5.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
home = "0.5.3"

md-5 = "0.10.4"
md4 = "0.10.2"
md2 = "0.10.2"
sha3 = "0.10.6"
sha2 = "0.10.6"
sha1 = "0.6.0"
ripemd = "0.1.3"
